link updated on index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import SearchAndFilter from "../components/SearchAndFilter";
 			<div class="mb-12">
 				<h1 class=" text-4xl font-bold">CompSciFeeds</h1>
 				<p class="text-gray-500">A collection of RSS feeds for Software professionals and Computer Science students.</p>
-				<a class="underline" href="/">Github project (Astro 2.0 w Solid + Tailwind)</a>
+				<a class="underline" href="https://github.com/LukeDavies12/compscifeeds-site">Github project (Astro 2.0 w Solid + Tailwind)</a>
 			</div>
 			<SearchAndFilter  client:load />
 		</div>
